# arras4_core

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SConscript  flowpipeline.yaml  package.py  sources.txt  vcpkg.json
arras4_client/: README.md  (+1 more)
arras4_client/lib/client/api/: AcapAPI.cc  AcapAPI.h  CMakeLists.txt  Client.cc  Client.h  ClientException.h  Component.cc  Component.h  ProgressSender.cc  ProgressSender.h  README.md  RezResolve.cc  RezResolve.h  SConscript  SessionDefinition.cc  SessionDefinition.h  client_api_platform.h
arras4_client/lib/client/local/: CMakeLists.txt  LocalSession.cc  LocalSession.h  LocalSessions.cc  LocalSessions.h  README.md  SConscript  SessionError.h  SessionNotification.cc  SessionNotification.h
arras4_client/lib/log_client/: CMakeLists.txt  LogClient.cc  LogClient.h  README.md  SConscript
arras4_client/lib/log_client/unittest/: SConscript  TestLogClient.cc  TestLogClient.h  main.cc
arras4_client/lib/sdk/: CMakeLists.txt  FarmHostsForArrasUtils.cc  FarmHostsForArrasUtils.h  FrameUtils.cc  FrameUtils.h  MultiSession.cc  MultiSession.h  README.client_overrides  README.md  SConscript  arras_static_check.h  sdk.cc  sdk.h  sdk_impl.h
arras4_computation_api/lib/computation_api/: CMakeLists.txt  Computation.cc  Computation.h  ComputationEnvironment.h  SConscript  standard_names.cc  standard_names.h  version.h
arras4_computation_api/lib/standalone/: CMakeLists.txt  README.md  SConscript  StandaloneEnvironment.cc  StandaloneEnvironment.h  StandaloneMetadata.cc  StandaloneMetadata.h
arras4_core_impl/cmd/execComp/: CMakeLists.txt  ExecComp.cc  ExecComp.h  SConscript  main.cc
arras4_core_impl/cmd/msgPlay/: CMakeLists.txt  README.md  SConscript  main.cc
arras4_core_impl/cmd/runComp/: CMakeLists.txt  SConscript  main.cc
arras4_core_impl/lib/: CMakeLists.txt
arras4_core_impl/lib/chunking/: CMakeLists.txt  ChunkingConfig.h  ChunkingMessageEndpoint.cc  ChunkingMessageEndpoint.h  MessageChunk.cc  MessageChunk.h  MessageUnchunker.cc  MessageUnchunker.h  SConscript
arras4_core_impl/lib/computation_impl/: CMakeLists.txt  CompEnvironmentImpl.cc  CompEnvironmentImpl.h  ComputationExitReason.h  ComputationHandle.cc  ComputationHandle.h  ComputationLoadError.h  ControlMessageEndpoint.cc  ControlMessageEndpoint.h  PerformanceMonitor.cc  PerformanceMonitor.h  README.md  SConscript
arras4_core_impl/lib/core_messages/: CMakeLists.txt  ControlMessage.cc  ControlMessage.h  EngineReadyMessage.cc  EngineReadyMessage.h  ExecutorHeartbeat.cc  ExecutorHeartbeat.h  PingMessage.cc  PingMessage.h  PongMessage.cc  PongMessage.h  SConscript  SessionStatusMessage.cc  SessionStatusMessage.h
arras4_core_impl/lib/exceptions/: CMakeLists.txt  InternalError.h  KeyError.h  SConscript  ShutdownException.h
arras4_core_impl/lib/execute/: CMakeLists.txt  ControlGroup.cc  ControlGroup.h  Environment.cc  Environment.h  IoCapture.cc  IoCapture.h  MemoryTracking.h  Process.cc  Process.h  ProcessController.cc  ProcessController.h  ProcessManager.cc  ProcessManager.h  RezContext.cc  RezContext.h  SConscript  ShellContext.cc  ShellContext.h  SpawnArgs.cc  SpawnArgs.h  cgroup_stubs.h  process_utils.cc  process_utils.h
arras4_core_impl/lib/message_impl/: CMakeLists.txt  Envelope.cc  Envelope.h  MessageEndpoint.h  MessageReader.cc  MessageReader.h  MessageWriter.cc  MessageWriter.h  MetadataImpl.cc  MetadataImpl.h  OpaqueContent.h  PeerMessageEndpoint.cc  PeerMessageEndpoint.h  README.md  SConscript  StreamImpl.cc  StreamImpl.h  messaging_version.h
arras4_core_impl/lib/routing/: Addresser.cc  Addresser.h  Addressing.cc  Addressing.h  CMakeLists.txt  ComputationMap.cc  ComputationMap.h  SConscript
arras4_core_impl/lib/shared_impl/: CMakeLists.txt  ConfigurationError.h  DispatcherExitReason.cc  DispatcherExitReason.h  ExecutionLimits.cc  ExecutionLimits.h  MessageDispatcher.cc  MessageDispatcher.h  MessageHandler.h  MessageQueue.cc  MessageQueue.h  Platform.h  Platform_Android.cc  Platform_Linux.cc  Platform_Windows.cc  Platform_iOS.mm  ProcessExitCodes.cc  ProcessExitCodes.h  README.md  RegistrationData.h  SConscript  ThreadsafeQueue.h  ThreadsafeQueue_impl.h
arras4_log/lib/arras4_athena/: AthenaLogger.cc  AthenaLogger.h  CMakeLists.txt  SConscript  UdpSyslog.cc  UdpSyslog.h  UdpSyslog_boost.cc  UdpSyslog_boost.h  UdpSyslog_noboost.cc  UdpSyslog_noboost.h  athena_platform.h
arras4_log/lib/arras4_crash/: CMakeLists.txt  CrashReporter.cc  CrashReporter.h  SConscript
arras4_message_api/lib/message_api/: Address.cc  Address.h  ArrasTime.cc  ArrasTime.h  ArrasTime_unix.cc  ArrasTime_windows.cc  CMakeLists.txt  ContentMacros.h  ContentRegistry.cc  ContentRegistry.h  DataInStream.h  DataOutStream.h  Message.h  MessageContent.h  MessageFormatError.h  Metadata.h  Object.cc  Object.h  ObjectContent.h  SConscript  UUID.cc  UUID.h  UUID_unix.cc  UUID_windows.cc  message_api_platform.h  messageapi_names.cc  messageapi_names.h  messageapi_types.h
arras4_network/lib/http/: CMakeLists.txt  HttpException.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  SConscript  http_platform.h  http_types.h
arras4_network/lib/httpserver/: CMakeLists.txt  HttpRequestEvent.h  HttpServer.cc  HttpServer.h  HttpServerException.h  HttpServerRequest.cc  HttpServerRequest.h  HttpServerResponse.cc  HttpServerResponse.h  SConscript  httpserver_platform.h  httpserver_types.h
arras4_network/lib/network/: BasicFramingSink.cc  BasicFramingSink.h  BasicFramingSource.cc  BasicFramingSource.h  Buffer.h  BufferedSink.cc  BufferedSink.h  BufferedSource.cc  BufferedSource.h  CMakeLists.txt  DataSink.h  DataSource.h  Encryption.cc  Encryption.h  FileDataSource.cc  FileDataSource.h  FileError.h  Frame.h  FramingError.h  IPCSocketPeer.cc  IPCSocketPeer.h  InetSocketPeer.cc  InetSocketPeer.h  InvalidParameterError.h  MultiBuffer.cc  MultiBuffer.h  OutOfMemoryError.h  Peer.cc  Peer.h  PeerException.h  SConscript  SocketPeer.cc  SocketPeer.h  network_platform.h  network_types.h  platform.h  windows_utils.h
arras4_test/cmd/testClient/: CMakeLists.txt  Data.cc  Data.h  SConscript  main.cc
(+172 files in other folders)
