# Copyright 2023-2024 DreamWorks Animation LLC and Intel Corporation
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(chunking)
add_subdirectory(computation_impl)
add_subdirectory(core_messages)
add_subdirectory(exceptions)
add_subdirectory(execute)
add_subdirectory(message_impl)
add_subdirectory(routing)
add_subdirectory(shared_impl)
